[gd_scene load_steps=5 format=3 uid="uid://bko0ifwwfqndb"]

[ext_resource type="Script" path="res://Scenes/Menu/menu.gd" id="1_8jp8g"]
[ext_resource type="Script" path="res://Scenes/Menu/volumeSlider.gd" id="5_2dd7u"]
[ext_resource type="AudioStream" uid="uid://c7swdp5vyrn1a" path="res://Audio/Spring_In_My_Step.ogg" id="6_l0j8x"]
[ext_resource type="Script" path="res://Scenes/game_save_controller.gd" id="7_0dpyi"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_8jp8g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
offset_top = 128.0
offset_right = 1152.0
offset_bottom = 195.0
theme_override_font_sizes/font_size = 48
text = "A GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer"]
offset_left = 480.0
offset_top = 216.0
offset_right = 664.0
offset_bottom = 264.0
text = "Play"

[node name="Options" type="Button" parent="CanvasLayer"]
offset_left = 480.0
offset_top = 280.0
offset_right = 664.0
offset_bottom = 328.0
text = "Options"

[node name="Credits" type="Button" parent="CanvasLayer"]
offset_left = 480.0
offset_top = 344.0
offset_right = 664.0
offset_bottom = 392.0
text = "Credits"

[node name="CreditsPanel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 48.0
offset_top = 40.0
offset_right = 1120.0
offset_bottom = 616.0

[node name="Title" type="Label" parent="CanvasLayer/CreditsPanel"]
layout_mode = 0
offset_left = 408.0
offset_top = 224.0
offset_right = 648.0
offset_bottom = 272.0
theme_override_font_sizes/font_size = 28
text = "A Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits Line 1" type="Label" parent="CanvasLayer/CreditsPanel"]
layout_mode = 0
offset_left = 408.0
offset_top = 272.0
offset_right = 648.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 16
text = "by David Church Rodr√≠guez"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="CanvasLayer/CreditsPanel"]
layout_mode = 0
offset_left = 1024.0
offset_top = 16.0
offset_right = 1056.0
offset_bottom = 48.0
text = "X"

[node name="OptionsPanel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 48.0
offset_top = 40.0
offset_right = 1120.0
offset_bottom = 616.0

[node name="Title" type="Label" parent="CanvasLayer/OptionsPanel"]
layout_mode = 0
offset_left = 408.0
offset_top = 56.0
offset_right = 648.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 28
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="CanvasLayer/OptionsPanel"]
layout_mode = 0
offset_left = 1024.0
offset_top = 16.0
offset_right = 1056.0
offset_bottom = 48.0
text = "X"

[node name="MasterVolume" type="Label" parent="CanvasLayer/OptionsPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 144.0
offset_right = 518.0
offset_bottom = 167.0
text = "Master Volume"

[node name="AudioBusSlider" type="HSlider" parent="CanvasLayer/OptionsPanel/MasterVolume"]
layout_mode = 0
offset_left = 144.0
offset_right = 244.0
offset_bottom = 16.0
max_value = 1.0
step = 0.001
script = ExtResource("5_2dd7u")
bus_name = "Master"

[node name="MusicVolume" type="Label" parent="CanvasLayer/OptionsPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 176.0
offset_right = 518.0
offset_bottom = 199.0
text = "Music Volume
"

[node name="AudioBusSlider" type="HSlider" parent="CanvasLayer/OptionsPanel/MusicVolume"]
layout_mode = 0
offset_left = 144.0
offset_right = 244.0
offset_bottom = 16.0
max_value = 1.0
step = 0.001
script = ExtResource("5_2dd7u")
bus_name = "music"

[node name="SFXVolume" type="Label" parent="CanvasLayer/OptionsPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 208.0
offset_right = 518.0
offset_bottom = 231.0
text = "SFX Volume"

[node name="AudioBusSlider" type="HSlider" parent="CanvasLayer/OptionsPanel/SFXVolume"]
layout_mode = 0
offset_left = 144.0
offset_right = 244.0
offset_bottom = 16.0
max_value = 1.0
step = 0.001
script = ExtResource("5_2dd7u")
bus_name = "sfx"

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_l0j8x")
bus = &"music"
parameters/looping = true

[node name="GameSaveController" type="Node2D" parent="."]
script = ExtResource("7_0dpyi")

[node name="Player" type="Node2D" parent="GameSaveController"]

[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Credits" to="CanvasLayer/Credits" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/CreditsPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/OptionsPanel/CloseButton" to="." method="_on_close_button_pressed"]
